--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.App_BotonPanico"
         tools:targetApi="31">
         <activity
-            android:name=".sing_in_user"
+            android:name=".main_menu"
+            android:exported="false" />
+        <activity
+            android:name=".data_register"
+            android:exported="false" />
+        <activity
+            android:name=".sign_in_user"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
