--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.App_BotonPanico"
         tools:targetApi="31">
         <activity
+            android:name=".reset_password"
+            android:exported="false" />
+        <activity
             android:name=".main_menu"
             android:exported="false" />
         <activity
