--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,28 @@
         android:theme="@style/Theme.App_BotonPanico"
         tools:targetApi="31">
         <activity
+            android:name=".qa_contact"
+            android:exported="false" />
+        <activity
+            android:name=".qa_contacts"
+            android:exported="false" />
+        <activity
+            android:name=".qa_map"
+            android:exported="false" />
+        <activity
+            android:name=".qa_panic_button"
+            android:exported="false" />
+        <activity
+            android:name=".insert_new_password"
+            android:exported="false" />
+        <activity
             android:name=".reset_password"
             android:exported="false" />
         <activity
             android:name=".main_menu"
             android:exported="false" />
         <activity
-            android:name=".data_register"
+            android:name=".data_register.data_register"
             android:exported="false" />
         <activity
             android:name=".sign_in_user"
