--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,14 @@ android {
 
 dependencies {
 
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.android.volley:volley-cronet:1.2.1'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.play.services.location
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
