--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <permission
+        android:name="com.example.usuario.googlemapatest.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.usuario.googlemapstest.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_BotonPanico"
         tools:targetApi="31">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAg4AZWPMCqGoQt_rzjvKDDLF9OEWR1IvA"></meta-data>
         <activity
             android:name=".qa_contact"
             android:exported="false" />
@@ -25,19 +37,19 @@
             android:name=".qa_panic_button"
             android:exported="false" />
         <activity
-            android:name=".insert_new_password"
+            android:name=".inser_new_password.insert_new_password"
             android:exported="false" />
         <activity
             android:name=".reset_password"
             android:exported="false" />
         <activity
-            android:name=".main_menu"
+            android:name=".qa_main_menu"
             android:exported="false" />
         <activity
-            android:name=".data_register.data_register"
+            android:name=".data_register.Controller_data_register"
             android:exported="false" />
         <activity
-            android:name=".sign_in_user"
+            android:name=".sign_in.Controller_sign_in_user"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
