--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".item_contact"
+            android:exported="false" />
+        <activity
             android:name=".Main_screen"
             android:exported="true">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <meta-data
@@ -39,7 +42,7 @@
             android:value="AIzaSyAg4AZWPMCqGoQt_rzjvKDDLF9OEWR1IvA" />
 
         <activity
-            android:name=".qa_contact"
+            android:name=".contacts.Controller_qa_contact"
             android:exported="false" />
         <activity
             android:name=".qa_contacts"
@@ -67,8 +70,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
