--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.android.volley:volley-cronet:1.2.1'
+    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
