--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.android.volley:volley-cronet:1.2.1'
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.google.android.gms:play-services-auth:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.2'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
