--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <permission
         android:name="com.example.usuario.googlemapatest.permission.MAPS_RECEIVE"
@@ -10,8 +10,7 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
-
-    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="com.example.usuario.googlemapstest.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE EXTERNAL_STORAGE" />
@@ -29,7 +28,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_BotonPanico"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Notification_panicbtn_active"
+            android:exported="false" />
         <activity
             android:name=".Controller.Controller_reset_password_code"
             android:exported="false"
@@ -39,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".Controller.Controller_Main_screen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -81,9 +83,10 @@
         <activity
             android:name=".Controller.Controller_MainActivity"
             android:exported="false" />
+
         <service
             android:name=".Service.Send_Message_Service"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
