--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Controller.Controller_data_register_personaldata"
+            android:exported="false" />
+        <activity
             android:name=".Notification_Panicbtn_Active"
             android:exported="false" />
         <activity
